[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nerva"
version = "0.0.1"
authors = [
  { name="Wieger Wesselink", email="j.w.wesselink@tue.nl" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wiegerw/sampleproject"
"Bug Tracker" = "https://github.com/wiegerw/sampleproject/issues"
